logs/dag_id=db_dg/run_id=scheduled__2024-01-03T000000+0000/task_id=insert_using_python_data/attempt=11.log
[2024-01-04T14:14:14.068+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T14:14:14.078+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T14:14:14.078+0000] {taskinstance.py:2171} INFO - Starting attempt 11 of 13
[2024-01-04T14:14:14.180+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): insert_using_python_data> on 2024-01-03 00:00:00+00:00
[2024-01-04T14:14:14.185+0000] {standard_task_runner.py:60} INFO - Started process 1075 to run task
[2024-01-04T14:14:14.188+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'db_dg', 'insert_using_python_data', 'scheduled__2024-01-03T00:00:00+00:00', '--job-id', '27', '--raw', '--subdir', 'DAGS_FOLDER/create_database_dag.py', '--cfg-path', '/tmp/tmpbih1xevi']
[2024-01-04T14:14:14.190+0000] {standard_task_runner.py:88} INFO - Job 27: Subtask insert_using_python_data
[2024-01-04T14:14:14.329+0000] {task_command.py:423} INFO - Running <TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [running]> on host 4a92eecc6669
[2024-01-04T14:14:14.469+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='prady1900' AIRFLOW_CTX_DAG_ID='db_dg' AIRFLOW_CTX_TASK_ID='insert_using_python_data' AIRFLOW_CTX_EXECUTION_DATE='2024-01-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='11' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-03T00:00:00+00:00'
[2024-01-04T14:14:14.481+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T14:14:14.650+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T14:14:14.727+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/create_database_dag.py", line 54, in insert_data_postg
    cursor.execute(sql_stmt)
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "287e"
LINE 1: ...p,resolve_time,category) Values (2,INC0000060,3,3,287ebd7da9...
                                                             ^

[2024-01-04T14:14:14.741+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=db_dg, task_id=insert_using_python_data, execution_date=20240103T000000, start_date=20240104T141414, end_date=20240104T141414
[2024-01-04T14:14:14.833+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 27 for task insert_using_python_data (trailing junk after numeric literal at or near "287e"
LINE 1: ...p,resolve_time,category) Values (2,INC0000060,3,3,287ebd7da9...
                                                             ^
; 1075)
[2024-01-04T14:14:14.883+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-04T14:14:14.903+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
